fixed List Request for workers to get only workers
