# api-gateway/api/docs/swagger.json
@@ -1853,6 +1853,13 @@
                         "name": "limit",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Owner ID od Worker",
+                        "name": "owner-id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2476,6 +2483,9 @@
         "models.WorkerList": {
             "type": "object",
             "properties": {
+                "count": {
+                    "type": "integer"
+                },
                 "workers": {
                     "type": "array",
                     "items": {
