# api-gateway/api/models/worker.go
@@ -12,21 +12,22 @@ type Worker struct {
 
 type WorkerList struct {
 	Workers []Worker `json:"workers"`
+	Count   int64    `json:"count"`
 }
 
 type CreateWorker struct {
-	FullName  string `json:"full_name"`
-	LoginKey  string `json:"login_key"`
-	Password  string `json:"password"`
-	OwnerId   string `json:"owner_id"`
+	FullName string `json:"full_name"`
+	LoginKey string `json:"login_key"`
+	Password string `json:"password"`
+	OwnerId  string `json:"owner_id"`
 }
 
 type UpdateWorker struct {
-	Id        string `json:"id"`
-	FullName  string `json:"full_name"`
-	LoginKey  string `json:"login_key"`
-	Password  string `json:"password"`
-	OwnerId   string `json:"owner_id"`
+	Id       string `json:"id"`
+	FullName string `json:"full_name"`
+	LoginKey string `json:"login_key"`
+	Password string `json:"password"`
+	OwnerId  string `json:"owner_id"`
 }
 
 // type CheckResponse struct {
